修正各Modal bug及隱藏Scrollbar

--- a/src/assets/style/tailwind.css
+++ b/src/assets/style/tailwind.css
@@ -25,6 +25,10 @@
   input[type="checkbox"] {
     @apply cursor-pointer;
   }
+
+  .modal-content::-webkit-scrollbar {
+    @apply hidden;
+  }
 }
 
 @layer components {
@@ -47,7 +51,9 @@
   }
 
   .modal-content {
-    @apply relative overflow-y-auto rounded-sm border border-gray-400 bg-white p-8;
+    @apply relative overflow-y-auto bg-white;
+    -ms-overflow-style: none; /* IE 和 Edge */
+    scrollbar-width: none; /* Firefox */
   }
 }
 
